0.04
 - Rename example files to better names.
 - Update copyright years.

0.03 2022-07-06T23:31:42+02:00
 - Add Error::Pure::Utils::clean() to tests for cleanup of errors stack.
 - Change reset to default which returns [].
 - Remove obsolete usage of English in test.
 - Update copyright years.

0.02 2021-06-20T16:45:19+02:00
 - Fix abstract.
 - Fix dependencies.
 - Fix test dependencies.

0.01 2021-06-20T10:23:41+02:00
 - First version.